# punky

./: .gitignore  CHANGELOG  Makefile  Makefile.am  README  README.md  TODO  TODO.md  alloc.c  alloc.h  builtin.c  builtin.c.in  builtin.h.in  configure.ac  constants.c.in  constants.h.in  enum.h  enum.h.in  env.c  env.h  eval.c  eval.h  expr.c  main.c  mkbuiltins.py  parse.y  parser.y  print.c  print.h  punky.c  punky.h  punky.h.in  scan.l  scan.l.in  scanner.l  types.h  types.h.in
.github/workflows/: distcheck.yml
test/: atoms.expect  atoms.in  atoms.lisp  atoms.test  bool.in  bool.out  builtins.expect  builtins.in  builtins.lisp  builtins.test  define.test  expect.c  file.in  file.out  functions.expect  functions.lisp  functions.test  lambda.in  lambda.out  sort.in  sort.lisp  sort.out  sort.test  string-reverse.in  string.in  string.out  test.in  test.out  valgrind-atoms.test  valgrind.atoms.test  valgrind.builtins.test  valgrind.define.test  valgrind.functions.test  valgrind.sort.test
test/old/: bool.out  defun.in  defun.out  env.in  env.out  re.in  re.out  sort.in  string-reverse.out  string.in  string.out
